<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.view.main.MainActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="46sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:alpha="0"
        app:startIconDrawable="@drawable/baseline_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.dicoding.storyapp.ui.customview.PasswordForm
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            android:hint="@string/email_address"
            android:layout_marginBottom="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:alpha="0"
        app:startIconDrawable="@drawable/baseline_lock_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.dicoding.storyapp.ui.customview.PasswordForm
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cta_toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:padding="0dp"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:alpha="0"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.dicoding.storyapp.ui.customview.MyButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/button_login"
            android:textSize="14sp"
            android:textStyle="bold"
            android:alpha="0"
            android:enabled="false"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="Widget.MaterialComponents.CircularProgressIndicator"
        android:visibility="gone"
        android:layout_gravity="center" />

</LinearLayout>