<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_story"
        android:title="@string/add_story"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_change_language"
        android:title="@string/change_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_maps"
        android:title="@string/maps"
        android:icon="@drawable/baseline_location_on_24"
        app:showAsAction="ifRoom" />
</menu>